# metamod-fwgs

./: CMakeLists.txt  README.md
.github/workflows/: nightly-builds.yml
cmake/: AppVersion.cmake
metamod/: CMakeLists.txt
metamod/include/dlls/: util.h
metamod/msvc/: metamod.rc
metamod/src/: commands_meta.cpp  dllapi.cpp  engine_api.cpp  metamod.cpp  metamod.h
metamod/version/: appversion.h.in
